@tool
extends Control

var Btn_brush = get_node_or_null("Center1/GridContainer/Btn_brush");
var Btn_select = get_node_or_null("Center1/GridContainer/Btn_select");
var Btn_test1 = get_node_or_null("Center1/GridContainer/Btn_test1");
var Btn_test2 = get_node_or_null("Center1/GridContainer/Btn_test2");
var Btn_test3 = get_node_or_null("Center1/GridContainer/Btn_test3");
var Btn_test4 = get_node_or_null("Center1/GridContainer/Btn_test4");



func _ready():
	pass



func _process(_delta):
	pass
